# llvm-ir-complexity-estimator

./: CMakeLists.txt  DEMO.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  REPRODUCE.md  app.py  build.sh  run.sh
build_local/: CMakeCache.txt
build_validate/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_validate/test/: Makefile  cmake_install.cmake
corpus_ll/: adler32.ll  compress.ll  crc32.ll  deflate.ll  enough.ll  fitblk.ll  gun.ll  gzappend.ll  gzclose.ll  gzjoin.ll  gzlog.ll  gznorm.ll  infback.ll  inffast.ll  inflate.ll  inih_fuzzing_inihfuzz.ll  inih_ini.ll  klib_bgzf.ll  klib_kalloc.ll  klib_kbarena.ll  klib_keigen.ll  klib_kexpr.ll  klib_khmm.ll  klib_kmath.ll  klib_kmempool.ll  klib_knetfile.ll  klib_knhx.ll  klib_ksa.ll  klib_kson.ll  klib_kstring.ll  klib_ksw.ll  klib_kthread.ll  klib_kurl.ll  libexpat_expat_gennmtab_gennmtab.ll  libexpat_expat_lib_random_arc4random.ll  libexpat_expat_lib_random_arc4random_buf.ll  libexpat_expat_lib_random_dev_urandom.ll  libexpat_expat_lib_random_getentropy.ll  libexpat_expat_lib_random_getrandom.ll  libexpat_expat_lib_xmlparse.ll  (+40 more)
corpus_src/klib/: kbarena.c  kbarena.h
corpus_src/klib/test/: Makefile  kbarena_test.c
corpus_src/linenoise/: .gitignore  Makefile  README.markdown  example.c  linenoise-test.c
include/: FeatureExtractor.h
python/: complexity_model.pkl  complexity_model_corpus.pkl  complexity_model_corpus_file.pkl  corpus_compile_manifest.csv  demo_pass_skipping.py  demo_results.txt  eval_corpus.json  eval_retrain.json  eval_retrain_file.json  eval_summary.json  evaluation_metrics.json  extract_features.py  generate_evaluation.py  infer_and_report.py  measure_pass_times.py  predictions_test.csv  requirements.txt  retrain_from_timing.py  run_retrain_corpus.sh  timing.csv  timing_corpus.csv  train.py
python/plots/: pred_aggregates.csv
scripts/: record_demo.sh
src/: FeatureExtractor.cpp  Plugin.cpp  main.cpp
templates/: index.html
test/: CMakeLists.txt  complex.ll
testcases/: alias_heavy.ll  branchy_loop.ll  complex.ll  sample.ll  type_complex.ll
